@@ -46,6 +46,9 @@ JEDIT 4.0 VERSION HISTORY
   regular expression "(?!glob).*"
 - You can double-click abbrevs in the 'Abbreviations' option pane to
   edit them
+- If the block caret is enabled, the overwrite caret is now 1/3 the
+  height of a character
+- Documentation updates (me and John Gellene)
 
 + Bug Fixes
 
